--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
   font-family: "Poppins", sans-serif;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 :root {
   --primary-color: #fa7436;
   --primary-color-dark-orange: #f05323;
