--- a/style.css
+++ b/style.css
@@ -179,6 +179,17 @@ nav .fa {
   }
 }
 
+@media only screen and (max-width: 550px) {
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+}
+
 @media (max-width: 390px) {
   html,
   body {
@@ -714,21 +725,30 @@ div .testimonial-starts-tour .fa {
   }
 }
 
-@media (max-width: 390px) {
-  .main-video .video iframe {
-    width: 100%;
-    height: 236px;
+@media only screen and (max-width: 550px) {
+  .container {
+    grid-template-columns: 1fr;
   }
 
-  .ytp-cued-thumbnail-overlay-image {
-    width: 10%;
+  .section-video {
+    width: 100%;
     margin: auto;
-    height: auto;
+    text-align: center;
+    padding-top: 150px;
+    padding-bottom: 80px;
   }
 
-  div .video {
-    width: 100%;
-    object-fit: cover;
+  .main-video .video iframe {
+    width: 390px;
+    height: 200px;
+  }
+
+  .main-video {
+    margin: 0;
+  }
+
+  .section-video h1 {
+    font-size: 24px;
   }
 }
 
@@ -1102,7 +1122,7 @@ svg {
   }
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 550px) {
   .footer-nav-links {
     padding-left: 100px;
     padding-right: 0;
@@ -2252,7 +2272,7 @@ section.testimonial {
   }
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 550px) {
   .slider-content {
     padding-left: 0;
     padding-right: 0;
@@ -2407,6 +2427,12 @@ section.testimonial-food {
 
   .slider-container p {
     display: inline-block;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .quastion-answers {
+    width: 80%;
   }
 }
 
