--- a/blog-article.css
+++ b/blog-article.css
@@ -203,11 +203,11 @@
   }
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 550px) {
+  .blog-sub-header,
+  .murmur-sub-header,
   .group-or-alone-sub-header h1 {
-    font-size: 24px;
-    width: 70%;
-    margin: auto;
-    margin-top: 150px;
+    margin-top: 30px;
+    font-size: 20px;
   }
 }
