--- a/blog.css
+++ b/blog.css
@@ -128,3 +128,17 @@
     font-size: 24px;
   }
 }
+
+@media only screen and (max-width: 550px) {
+  .blog-header h1 {
+    margin-top: 30px;
+  }
+
+  .blog {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 100px;
+  }
+}
