--- a/question-answers.css
+++ b/question-answers.css
@@ -125,3 +125,9 @@ svg {
     background-color: #fff;
   }
 }
+
+@media only screen and (max-width: 550px) {
+  .question-sub-header h1 {
+    margin-top: 30px;
+  }
+}
