--- a/visa.css
+++ b/visa.css
@@ -202,7 +202,16 @@ img {
   }
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 550px) {
+  .visa-sub-header {
+    width: 100%;
+    height: 60vh;
+  }
+
+  .visa-sub-header h1 {
+    margin-top: 30px;
+  }
+
   .visa-btn {
     padding-top: 30px;
     margin-left: -10px;
@@ -210,5 +219,11 @@ img {
 
   .visa-quastion-answers {
     padding-top: 70px;
+  }
+
+  .visa-quastion-answers {
+    padding-top: 300px;
+    width: 90%;
+    padding-bottom: 100px;
   }
 }
