--- a/style.css
+++ b/style.css
@@ -235,8 +235,8 @@ nav .fa {
 .about-right p {
   margin-bottom: 20px;
   color: var(--text-color-p-grey);
-  width: 100%;
   text-align: left;
+  width: 80%;
 }
 
 .about-us-btn {
@@ -315,11 +315,25 @@ nav .fa {
   div .about-us-btn {
     justify-content: center;
   }
+
+  .about-right p {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .about-right p {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 390px) {
   .about-us h1 {
     font-size: 24px;
+  }
+
+  .about-right p {
+    width: 100%;
   }
 }
 
