--- a/blog.css
+++ b/blog.css
@@ -130,6 +130,12 @@
 }
 
 @media only screen and (max-width: 550px) {
+  .blog-header {
+    background-position: center;
+  }
+  .blog-header h1 {
+    font-size: 24px;
+  }
   .blog {
     width: 80%;
     margin: auto;
