--- a/style.css
+++ b/style.css
@@ -2183,6 +2183,10 @@ svg {
 }
 
 @media only screen and (max-width: 550px) {
+  .sub-header {
+    background-position: center;
+  }
+
   .sub-header h1 {
     margin-top: 150px;
   }
