--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -43,7 +41,7 @@ h1 {
   min-height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.1), rgba(4, 9, 30, 0.2)),
-    url(hero-page-img/bek-ruby-hero-page\ 3.png);
+    url(hero-page-img/bek-ruby-hero-page-low-q.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
