--- a/style.css
+++ b/style.css
@@ -99,10 +99,20 @@ nav .fa {
 .text-box {
   color: white;
   position: relative;
-  left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   margin-top: 100px;
+}
+
+.text-box {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s, transform 0.5s;
+}
+
+.text-box.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .text-box h1 {
@@ -181,11 +191,11 @@ nav .fa {
   }
 
   .text-box {
-    left: 50%;
+    color: white;
+    position: relative;
     transform: translate(-50%, -50%);
     text-align: center;
-    margin-top: 90px;
-    margin-bottom: 250px;
+    margin-top: 100px;
   }
 
   .text-box h1 {
@@ -844,6 +854,8 @@ svg {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 80%;
+  margin: auto;
 }
 
 .footer-container p {
@@ -1002,6 +1014,10 @@ svg {
   padding-left: 90px;
 }
 
+.company-info {
+  padding-left: 90px;
+}
+
 .footer-logo a img {
   width: 200px;
   margin-left: 40px;
@@ -1013,11 +1029,17 @@ svg {
 
 @media (max-width: 991px) {
   .logo {
-    width: 30%;
+    width: 10%;
   }
 
   .links {
     display: flex;
+  }
+
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .footer-container p {
@@ -1027,12 +1049,35 @@ svg {
   .footer-nav-links {
     padding-right: 0px;
   }
+
+  .footer-btn-email {
+    font-size: 16px;
+    padding: 12px 20px;
+    width: 150px;
+  }
+
+  .email-btn {
+    margin-right: 0px;
+  }
+
+  .footer-btn {
+    padding: 0px;
+  }
+
+  .links {
+    padding: 10px 0px;
+  }
+
+  .company-info {
+    padding-left: 90px;
+  }
 }
 
 @media (max-width: 700px) {
   .footer-container {
-    flex-direction: column;
+    justify-content: space-between;
     padding-bottom: 30px;
+    width: 100%;
   }
   .logo {
     width: 30%;
@@ -1059,11 +1104,30 @@ svg {
     align-items: center;
     justify-content: center;
   }
+
+  .company-info {
+    padding-left: 0px;
+  }
+
+  .footer-logo-address {
+    margin-left: 30px;
+  }
 }
 
 @media only screen and (max-width: 550px) {
+  .footer-container {
+    flex-direction: column;
+    padding-bottom: 30px;
+    width: 100%;
+  }
+
   .footer-nav-links {
     padding-top: 50px;
+    order: 1;
+  }
+
+  .footer-logo-address {
+    order: 3;
   }
 
   .footer-container p {
@@ -2056,7 +2120,7 @@ svg {
 }
 
 .row {
-  margin-top: 5%;
+  margin-top: 0%;
   display: flex;
   justify-content: space-between;
   align-items: center;
