--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ nav .fa {
   position: relative;
   transform: translate(-50%, -50%);
   text-align: center;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .text-box {
@@ -158,15 +158,41 @@ nav .fa {
   }
 
   .text-box h1 {
-    font-size: 40px;
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .text-box {
+    position: relative;
+    top: -80px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .text-box {
+    position: relative;
+    top: -80px;
+  }
+
+  .text-box h1 {
+    font-size: 32px;
   }
 }
 
 @media screen and (max-width: 992px) {
   .text-box h1 {
-    font-size: 48px;
+    font-size: 32px;
     margin-top: 100px;
     margin-bottom: 0;
+  }
+
+  .text-box p {
+    font-size: 18px;
+  }
+  .text-box {
+    position: relative;
+    top: -80px;
   }
 }
 
@@ -187,15 +213,19 @@ nav .fa {
   }
 
   .header {
-    min-height: 80vh;
+    min-height: 100vh;
   }
 
   .text-box {
     color: white;
     position: relative;
-    transform: translate(-50%, -50%);
     text-align: center;
     margin-top: 100px;
+  }
+
+  .text-box {
+    position: relative;
+    top: -60px; /* move the text box 20px from the top */
   }
 
   .text-box h1 {
@@ -456,11 +486,11 @@ div .testimonial-starts-tour .fa {
 }
 
 .tour-col:hover {
-  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.3);
 }
 
 .row-tour:hover > :not(:hover) {
-  opacity: 0.7;
+  opacity: 1;
 }
 
 @media (max-width: 700px) {
@@ -1616,6 +1646,7 @@ a.google-map-link {
   border-color: var(--primary-color);
   cursor: pointer;
   margin-top: 10px;
+  font-size: 16px;
 }
 
 a {
@@ -1664,6 +1695,7 @@ a {
   flex-direction: column;
   align-items: center;
   padding-top: 50px;
+  margin-bottom: 150px;
 
   /*background-color: #fff;
   border-radius: 10px; */
