--- a/8-days-migration.css
+++ b/8-days-migration.css
@@ -13,6 +13,10 @@
   margin-top: 100px;
 }
 
+.highlights-ul ul {
+  margin-bottom: 20px;
+}
+
 .migration-about-sub-header ul li a {
   color: #fff;
 }
@@ -22,5 +26,10 @@
 }
 
 .about-tour-col-info li {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
+}
+
+.highlights-ul ul li {
+  padding-bottom: 5px;
+  font-weight: 700;
 }
