--- a/overnights.css
+++ b/overnights.css
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  margin: auto;
   position: relative;
   overflow: hidden;
   background-color: black;
@@ -133,7 +134,31 @@ button {
 }
 
 @media (max-width: 768px) {
+  .slide {
+    width: 100%;
+    height: 100%;
+  }
+
+  .overnight-hotels {
+    width: 100%;
+    height: 60%;
+  }
+
   .text-overlay {
+    width: 80%;
+    font-size: 14px !important;
+    top: 1%;
+    left: 40%;
+    transform: translateX(-50%);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  }
+
+  .text-overlay p {
+    line-height: 1.3;
+  }
+
+  button {
     font-size: 18px;
+    background-color: rgba(255, 255, 255, 0.5);
   }
 }
