--- a/style.css
+++ b/style.css
@@ -401,6 +401,15 @@ nav .fa {
   color: var(--text-color-p-grey);
 }
 
+.row-tour {
+  margin-top: 5%;
+  display: flex;
+  flex-direction: row;
+  column-gap: 35px;
+  justify-content: center;
+  align-items: center;
+}
+
 .tour-info {
   width: 80%;
   margin: auto;
@@ -457,18 +466,13 @@ div .testimonial-starts-tour .fa {
   }
 }
 
-@media screen and (max-width: 700px) {
+@media (min-width: 480px) and (max-width: 767px) {
   div .testimonial-starts-tour .fa {
     margin-right: -15px;
   }
 }
-
 .row-tour {
-  margin-top: 5%;
-  display: flex;
-  column-gap: 35px;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
 }
 
 .tour-days {
@@ -493,14 +497,13 @@ div .testimonial-starts-tour .fa {
   opacity: 1;
 }
 
-@media (max-width: 700px) {
-  .row-tour {
-    flex-direction: column;
-    align-items: center;
-  }
+.tour h1 {
+  font-size: 24px;
+}
 
-  .tour h1 {
-    font-size: 24px;
+@media (min-width: 768px) {
+  .row-tour {
+    flex-direction: row; /* or any other value you prefer */
   }
 }
 
@@ -510,13 +513,14 @@ div .testimonial-starts-tour .fa {
   margin: auto;
   text-align: center;
   padding-top: 150px;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 
 .why-us h1 {
   font-size: 32px;
   font-weight: 600;
   color: var(--text-color);
+  margin-bottom: 50px;
 }
 
 .why-us p {
@@ -543,8 +547,16 @@ div .testimonial-starts-tour .fa {
   box-shadow: 0 10px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
-.why-col img {
+.why-col-img {
   width: 50%;
+  margin: auto;
+}
+
+.why-col img {
+  object-fit: cover;
+  width: 10px;
+  height: auto;
+  margin: auto;
 }
 
 .why-us h3 {
@@ -598,7 +610,7 @@ div .testimonial-starts-tour .fa {
   color: #ffffff;
   text-align: center;
   font-size: 24px;
-  padding: 12px 20px;
+  padding: 10px 30px;
   width: 200px;
   transition: all 0.5s;
   cursor: pointer;
@@ -2087,10 +2099,9 @@ svg {
 
 .cancellation-policy-container {
   width: 60%;
-  margin-bottom: 20px;
   margin-right: 20px;
   border-radius: 5px;
-  padding-bottom: 50px;
+  padding-bottom: 150px;
 }
 
 .cancellation-policy-container h2 {
@@ -2275,7 +2286,7 @@ section.testimonial {
 
 .slider-container {
   max-width: 1120px;
-  width: 1000%;
+  width: 100%;
   padding: 40px 0;
 }
 
@@ -2386,24 +2397,9 @@ section.testimonial {
 .swiper-pagination.bullet-active {
   background-color: var(--primary-color);
 }
-@media screen and (max-width: 700px) {
-  .slider-content {
-    margin: 0 10px;
-  }
-  .swiper-navBtn {
-    display: none;
-  }
-
-  .slider-container .testimonial-title h1 {
-    font-size: 24px;
-  }
-
-  .slider-content {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
+@media (min-width: 480px) and (max-width: 767px) {
 }
-
+/*
 @media only screen and (max-width: 550px) {
   .slider-content {
     padding-left: 0;
@@ -2419,7 +2415,7 @@ section.testimonial {
     padding: 0;
     margin-top: 70px;
   }
-}
+} */
 
 /*---------------------------- testimonial-food ----------------------------*/
 
