--- a/welcome-uz.css
+++ b/welcome-uz.css
@@ -57,29 +57,6 @@
   text-align: center; /* add this line */
 }
 
-.about-uz-btn {
-  text-align: center;
-}
-
-.red-hero-btn.red-btn {
-  /*border: 1px solid #f44336;*/
-  border: 1px solid gray;
-  background: transparent;
-  /*color: #f44336; */
-  color: gray;
-  padding: 10px;
-}
-.red-hero-btn.red-btn:hover {
-  border: 1px solid #f44336;
-  background: #f44336;
-  color: #fff;
-}
-.red-hero-btn.red-btn::after {
-  background: #f44336;
-}
-.red-hero-btn.red-btn::before {
-  background: #f44336;
-}
 .content-image {
   flex-basis: 50%;
 }
@@ -87,10 +64,14 @@
   width: 100%;
 }
 
+.youtube-hero-btn {
+  padding: 10px 30px;
+}
+
 @media only screen and (max-width: 480px) {
   .uz-destination {
     width: 100%;
-    height: 200vh;
+    height: 100%;
     margin: auto;
     padding-bottom: 50px;
   }
@@ -101,5 +82,27 @@
 
   .about-col-2 {
     order: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .uz-destination {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    padding-bottom: 50px;
+  }
+
+  .about-col-1 {
+    order: 2;
+  }
+
+  .about-col-2 {
+    order: 1;
+  }
+
+  .about-col img {
+    width: 100%;
+    margin-top: -140px;
   }
 }
