--- a/blog.css
+++ b/blog.css
@@ -2,7 +2,7 @@
   height: 50vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.1), rgba(4, 9, 30, 0.5)),
-    url(hero-page-img/blog-hero-img.jpg);
+    url(hero-page-img/769A2655.jpg);
   background-size: cover;
   text-align: center;
   color: #fff;
@@ -20,12 +20,14 @@
   text-align: center;
   padding-top: 150px;
   padding-bottom: 100px;
+  display: none;
 }
 
 .row-blog {
   margin-top: 5%;
   display: flex;
   justify-content: space-between;
+  display: none;
 }
 
 .blog h1 {
