--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1 {
 nav {
   width: 100%;
   display: flex;
-  padding: 2% 4%;
+  padding: 2% 10%;
   justify-content: space-between;
   align-items: center;
 }
@@ -1116,7 +1116,7 @@ svg {
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   .footer-container {
     justify-content: space-between;
     padding-bottom: 30px;
@@ -1157,11 +1157,27 @@ svg {
   }
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 575px) {
   .footer-container {
     flex-direction: column;
     padding-bottom: 30px;
     width: 100%;
+  }
+
+  .footer-btn {
+    margin: 0 auto;
+  }
+
+  .footer-media-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .footer-btn-email {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
   .footer-nav-links {
@@ -1182,7 +1198,7 @@ svg {
   }
 
   .footer-copyright {
-    text-align: center;
+    text-align: left;
     padding-left: 0px;
     align-items: center;
     justify-content: center;
@@ -1197,10 +1213,6 @@ svg {
   .footer-btn {
     align-items: center;
     justify-content: center;
-  }
-
-  .footer-btn-email {
-    padding: 12px 20px;
   }
 }
 
@@ -2271,17 +2283,15 @@ svg {
 
 /*---------------------------- testimonial ----------------------------*/
 
-section.testimonial {
-  background-color: var(--testimonial-background-color);
-}
 .testimonial {
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  /*
   background-color: var(--testimonial-background-color);
+  */
   padding: 3px;
-  padding-bottom: 40px;
 }
 
 .slider-container {
@@ -2311,6 +2321,7 @@ section.testimonial {
   border-radius: 25px;
   margin: 0 40px;
 }
+
 .card {
   border-radius: 25px;
   background-color: #fff;
