--- a/question-answers.css
+++ b/question-answers.css
@@ -28,7 +28,7 @@ body {
 }
 
 .quastion-answers {
-  min-height: 150vh;
+  min-height: 50vh;
   width: 60%;
   margin: 0 auto;
   display: flex;
@@ -130,4 +130,23 @@ svg {
   .question-sub-header h1 {
     margin-top: 150px;
   }
+}
+
+
+/* notion link */
+.notion-button {
+  margin-top: 30px;
+  display: inline-block;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-weight: 500;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+  font-family: sans-serif;
+}
+
+.notion-button:hover {
+  background-color: #333333;
 }
