--- a/testimonial.css
+++ b/testimonial.css
@@ -1,10 +1,15 @@
 .testimonial-container {
   height: 100vh;
   width: 100%;
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: center;
   background-color: #f5f5f5;
+}
+
+.testimonial-title {
+  text-align: center;
+  margin-top: 100px;
 }
 .testimonial-c-2 {
   position: relative;
@@ -15,8 +20,8 @@
 }
 
 .testimonial-c-2 .testimonial-img {
-  height: 170px;
-  width: 170px;
+  height: 130px;
+  width: 130px;
   object-fit: cover;
   border-radius: 50%;
 }
@@ -91,6 +96,10 @@
   .testimonial-container {
     height: 140vh;
   }
+
+  .testimonial-title p {
+    width: 100%;
+    }
 }
 
 @media screen and (max-width: 768px) {
